<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/activity_action_bar"/>
    <LinearLayout
        style="@style/PasswordLayout">
        <TextView
            style="@style/PasswordLabel"
            android:text="@string/new_password_label"/>
        <com.air.phone.widget.HideablePasswordEditText
            style="@style/ModifyPasswordEdit"
            android:id="@+id/old_password"
            android:hint="@string/new_password_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/modify_password_divide"/>
    <LinearLayout
        style="@style/PasswordLayout">
        <TextView
            style="@style/PasswordLabel"
            android:text="@string/new_password_label"/>
        <com.air.phone.widget.HideablePasswordEditText
            style="@style/ModifyPasswordEdit"
            android:id="@+id/new_password"
            android:hint="@string/old_password_hint"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/modify_password_divide"/>
    <LinearLayout
        style="@style/PasswordLayout">
        <TextView
            style="@style/PasswordLabel"
            android:text="@string/new_password_label"/>
        <com.air.phone.widget.HideablePasswordEditText
            style="@style/ModifyPasswordEdit"
            android:id="@+id/re_password"
            android:hint="@string/re_password_hint"/>
    </LinearLayout>

    <Button
        style="@style/Button.Send"
        android:id="@+id/save_button"
        android:text="@string/save_button"/>
</LinearLayout>