<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
        android:id="@+id/register_logo"
        layout="@layout/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_logo"
        android:layout_marginTop="@dimen/login_edit_margin_top">
        <EditText
            style="@style/RegisterEdit"
            android:id="@+id/user_name"
            android:hint="@string/username_hint"
            android:numeric="integer"
            android:background="@drawable/edit_up_bg"/>
        <View
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="1dp"
            android:background="@drawable/edit_divide"/>
        <com.air.phone.widget.HideablePasswordEditText
            style="@style/RegisterEdit.Password"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:password="true"
            android:background="@drawable/edit_down_bg"/>
    </LinearLayout>

    <Button
        android:id="@+id/ok"
        style="@style/Button.Register"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/register_tips_margin_bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/no_account_color"
            android:textSize="@dimen/register_right_now_text"
            android:text="@string/no_account"/>
        <TextView
            android:id="@+id/register_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/register_right_now_text"
            android:textStyle="bold"
            android:textColor="@color/register_right_now_color"
            android:text="@string/register_right_now"/>
    </LinearLayout>
</RelativeLayout>