<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background">
    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:padding="10dp">
        <TextView
            android:id="@+id/standby_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="@dimen/radio_button_drawable_padding"
            android:textColor="@color/radio_button_text_color"
            android:text="@string/mode_standby_text"/>
        <TextView
            android:id="@+id/mode_normal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="@dimen/radio_button_drawable_padding"
            android:textColor="@color/radio_button_text_color"
            android:text="@string/mode_normal_text"/>
        <TextView
            android:id="@+id/mode_fast_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="@dimen/radio_button_drawable_padding"
            android:textColor="@color/radio_button_text_color"
            android:text="@string/mode_fast_text"/>
    </LinearLayout>
    <Button
        android:id="@+id/my_home"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:textColor="@color/my_purifier_button_text"
        android:textSize="@dimen/button_text_size"
        android:text="@string/my_home"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/my_home"
        android:layout_below="@id/tab_layout"
        android:layout_marginTop="73dp"
        android:weightSum="2"
        android:gravity="center">
        <ImageView
            android:id="@+id/image_machine"
            android:layout_width="match_parent"
            android:layout_height="342dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/machine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/pace"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="17dp"
                android:textColor="@color/filter_text_color"
                android:textSize="@dimen/filter_label_text_size"
                android:text="@string/filter_progress_label"/>
            <TextView
                android:id="@+id/filter_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/filter_progress_text_size"
                android:textColor="@color/filter_text_color"/>
            <Button
                android:id="@+id/init_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/button_selector"
                android:textColor="@color/my_purifier_button_text"
                android:singleLine="true"
                android:textSize="@dimen/button_text_size"
                android:text="@string/init_text"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>