<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res/com.air.phone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dash_board_center_layout_margin_left_right"
        android:layout_marginRight="@dimen/dash_board_center_layout_margin_left_right"
        android:layout_marginTop="@dimen/dash_board_center_layout_margin_top"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="@dimen/in_door_level_label_text_margin"
                android:textSize="@dimen/in_door_label_size"
                android:textColor="@color/in_door_label_text_color"
                android:text="@string/in_door_level_label"/>
            <com.air.phone.widget.FontTextView
                android:id="@+id/in_door_aqi_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/in_door_level_label_text_margin"
                android:background="@drawable/in_door_level_bg"
                android:textColor="@color/in_door_level_text_color"
                android:textSize="@dimen/in_door_level_size"
                android:gravity="center"
                android:text="@string/good"/>
        </LinearLayout>
        <com.air.phone.widget.FontTextView
            android:id="@+id/in_door_aqi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/in_door_value_text_color"
            android:textSize="@dimen/in_door_value_size"
            android:layout_marginTop="@dimen/in_door_value_text_margin_top"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/good"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dash_board_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dash_board_bottom_layout_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="3">
        <com.air.phone.widget.DashBoardItemLayout
            android:id="@+id/out_door_aqi_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_dash_board_out_door"
            app:label="@string/out_door_level_label"/>
        <com.air.phone.widget.DashBoardItemLayout
            android:id="@+id/indoor_temperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_dash_board_temperature"
            app:label="@string/in_door_temperature_label"/>
        <com.air.phone.widget.DashBoardItemLayout
            android:id="@+id/indoor_humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_dash_board_hudimity"
            app:label="@string/in_door_humidity_label"/>
    </LinearLayout>

    <TextView
        android:id="@+id/dash_board_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/dash_board_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dash_board_tips_text_margin_bottom"
        android:textSize="@dimen/dash_board_tips_text_size"
        android:textColor="@color/dash_board_tips_text_color"
        android:text="@string/in_door_level_label"/>
</RelativeLayout>